--- a/public/styles/_search_suggestions.scss
+++ b/public/styles/_search_suggestions.scss
@@ -13,3 +13,12 @@
 	display: none;
 	box-shadow: 0px 10px 15px 0px rgba(0,0,0,0.4);
 }
+
+.search-suggestions-list {
+	padding: 0;
+	list-style: none;
+	.suggestion {
+		display: block;
+		border-bottom: 1px solid $border-color;
+	}
+}
