--- a/public/styles/_search_suggestions.scss
+++ b/public/styles/_search_suggestions.scss
@@ -13,12 +13,54 @@
 	display: none;
 	box-shadow: 0px 10px 15px 0px rgba(0,0,0,0.4);
 }
-
-.search-suggestions-list {
-	padding: 0;
-	list-style: none;
-	.suggestion {
-		display: block;
-		border-bottom: 1px solid $border-color;
+.suggestions {
+	.search-suggestions-list {
+		padding: 0;
+		list-style: none;
+		margin: 0;
+		.suggestion {
+			display: grid;
+			grid-template-columns: 80px auto auto;
+			
+			border-bottom: 1px solid $border-color;
+			
+			&__image {
+				grid-column: 1/2;
+				grid-row: 1/3;
+			}
+			&__title {
+				grid-column: 2/3;
+				grid-row: 2/3;
+				padding: 0 0.5em;
+				align-self: end;
+				a {
+					color: inherit;
+				}
+			}
+			&__type {
+				grid-column: 2/3;
+				grid-row: 1/2;
+				padding: 0 0.5em;
+			}
+			&__price {
+				grid-column: 3/4;
+				grid-row: 2/3;
+				justify-self: end;
+				padding: 0 0.5em;
+				align-self: end;
+				.currency_main {
+					font-size: 1rem;
+					@include media-breakpoint-down(xs){
+						font-size: $font-size-sm;
+					}
+				}
+			}
+		}
+	}
+	&__not-found {
+		padding: 1rem;
+	}
+	&__footer {
+		padding: 1rem;
 	}
 }
