--- a/public/styles/_search_suggestions.scss
+++ b/public/styles/_search_suggestions.scss
@@ -9,7 +9,7 @@
 	top: 200px;
 	background-color: $gray-100;
 	z-index: 10;
-	overflow: scroll;
+	overflow-y: scroll;
 	display: none;
 	box-shadow: 0px 10px 15px 0px rgba(0,0,0,0.4);
 }
