--- a/public/admin/styles/_nav-login.scss
+++ b/public/admin/styles/_nav-login.scss
@@ -33,7 +33,7 @@
 	}
 	
 	.langswitch {
-		.langswitch-flag {
+		.langswitch__flag {
 			// Sizing for SVG flag. Flags do not have the same aspect ratios so we set fixed height only.
 			height: 0.8rem;
 			width: auto;
