--- a/public/styles/_search_suggestions.scss
+++ b/public/styles/_search_suggestions.scss
@@ -20,6 +20,7 @@
 			display: grid;
 			grid-template-columns: 80px auto auto;
 			
+			border: 1px solid transparent;
 			border-bottom: 1px solid $border-color;
 			
 			color: inherit;
@@ -27,6 +28,10 @@
 			&:hover, &:active, &:focus {
 				outline: none;
 				background-color: white;
+			}
+			&:focus {
+				border: 1px solid rgba($primary, 0.75);
+				box-shadow: inset 0 0 .2rem rgba($primary, 0.25);
 			}
 			
 			&__image {
