admin menu color tuning

--- a/public/styles/_admin-object-menu.scss
+++ b/public/styles/_admin-object-menu.scss
@@ -10,7 +10,8 @@
 		.btn, .btn-group {
 			background-color: rgba(white, 0.85);
 			&:hover, &:focus {
-				background-color: black;
+				background-color: $primary;
+				color: white;
 			}
 		}
 	}
